<resources>
    <string name="app_name">Attendance App</string>

    <string name="staffRegTitle">Staff Registration</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">New Member? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

    <!-- For new design -->
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>

    <!-- Newly defined strings -->
    <string name="loginTitleText">LOGIN NOW</string>
    <string name="loginAsTitle">LOGIN AS:</string>
    <string name="loginUsernameHint">Username...</string>
    <string name="loginEmailHint">Email address...</string>
    <string name="loginPasswordHint">Password…</string>
    <string name="mainHeaderText">College Attendance App</string>
    <string name="mainFooterText">Copyright @2021 Attendance App</string>


    <!--Arrays place -->

    <array name="class_levels">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
        <item>Level 4</item>
    </array>

    <array name="departments">
        <item>ICT</item>
        <item>CROP</item>
        <item>CEE</item>
    </array>

    <array name="staffRoles">
        <item>DAS</item>
        <item>HOD</item>
        <item>DOQ</item>
        <item>DPAT</item>
    </array>

    <array name="provinces">
        <item>EAST</item>
        <item>WEST</item>
        <item>NORTH</item>
        <item>SOUTH</item>
    </array>

    <array name="districts">
        <item>HUYE</item>
        <item>NYANZA</item>
        <item>NYAMAGABE</item>
        <item>NGOMA</item>
    </array>

    <array name="sectors">
        <item>NGARAMA</item>
        <item>TUMBA</item>
        <item>GATSIBO</item>
        <item>KAGEYO</item>
    </array>

    <array name="cells">
        <item>KARAMBI</item>
        <item>RANGO</item>
    </array>

    <array name="villages">
        <item>KIYOVU</item>
        <item>GATARE</item>
    </array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="title_activity_admin_navbar">AdminNavbar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Notifications</item>
        <item>Movies</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


    <string name="module_name">Module Name</string>
    <string name="module_code">Module code...</string>
    <string name="exit_login">Exit login</string>
    <string name="add_department">Add department</string>
    <string name="add_new_department">Add new Department</string>
    <string name="update_department">Update Department</string>
    <string name="register_module">Register new module</string>

</resources>