<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/mainCard"
        app:cardCornerRadius="@dimen/loginCardRadius"
        android:elevation="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/mainViewsMarginTop"
        android:layout_marginBottom="@dimen/mainViewsMarginBottom"
        android:background="@color/whiteCardColor">

    <LinearLayout
            style="@style/linearParent"
            android:layout_gravity="center"
            android:padding="@dimen/mainViewsMargin">

        <TextView
                android:id="@+id/loginText"
                style="@style/headerTextPrimary"
                android:text="@string/loginAsTitle"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginRole"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginTop="8dp"
                android:textColor="@color/blueColorC"
                android:layout_marginBottom="15dp" />

        <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/textMarginTop">

            <EditText
                    android:id="@+id/editEmail"
                    style="@style/modifiedEditText"
                    android:inputType="text"
                    android:maxLines="1"
                    android:hint="@string/loginEmailHint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/textMarginTop">
            <EditText
                    android:id="@+id/editPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/loginPasswordHint"
                    android:maxLines="1"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/buttonLogin"
                style="@style/loginButton"
                android:layout_gravity="center"
                android:text="Login"/>

        <ProgressBar android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:visibility="gone"
                     android:id="@+id/loginLoadingPB"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/exitLogin"
                android:layout_marginTop="10dp"
                android:text="@string/exit_login"
                android:textColor="@color/reddish280"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textAlignment="center"
                android:gravity="center_horizontal"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>